add necessary files

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ bin/
 *.exe
 
 # others
-from_NR/*.f90
-downscale/numrec.f90
+#from_NR/*.f90
+#downscale/numrec.f90
 from_NR.tgz
 
 # no text files (OK)
