--- a/scrf/fortest/test.exe.dSYM/Contents/Info.plist
+++ b/scrf/fortest/test.exe.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.generate_ensemble.exe</string>
+		<string>com.apple.xcode.dsym.test.exe</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
