--- a/scrf/Makefile-plato
+++ b/scrf/Makefile-plato
@@ -4,7 +4,7 @@
 #========================================================================
 
 # Define core directory below which everything resides
-F_MASTER = /home/gut428/scratch/GMET/GMET_scripts/
+F_MASTER = /home/gut428/GMET/GMET_scripts
 
 # Core directory that contains source code
 F_SRC_DIR = $(F_MASTER)/scrf
@@ -66,7 +66,6 @@ prob_qpe= \
 		stringmod.f90 \
 		save_precip.f90 \
 		save_vars.f90 \
-		save_rndnum.f90 \
 		save_vars_rndnum.f90 \
 		read_nc_grid.f90 \
 		read_grid_list.f90 \
@@ -82,8 +81,8 @@ SCRF_GEN = \
 		trig_degrees.f90 \
 		erfinv.f90 \
 		exit_scrf.f90 \
-		field_rand_nopointer.f90 \
-		spcorr_grd_c0.f90 \
+		field_rand.f90 \
+		spcorr_grd.f90 \
                 init_rand_seed_I4B.f90
 
 GEN = $(patsubst %, $(F_SRC_DIR)/%, $(SCRF_GEN))
@@ -108,11 +107,11 @@ FLAGS = -p -g -Wall -ffree-line-length-none -fmax-errors=0 -fbacktrace -fcheck=b
 
 # Define the driver routine
 SCRF_DRIVER= \
-	generate_rndnum_c0.f90
+	generate_ensembles.f90
 DRIVER = $(patsubst %, $(DRIVER_DIR)/%, $(SCRF_DRIVER))
 
 # name of executable
-EXE = generate_rndnum.exe
+EXE = generate_ensemble.exe
 
 #========================================================================
 # PART 3: Checks
