--- a/scrf/driver/Makefile-copernicus-rndnum
+++ b/scrf/driver/Makefile-copernicus-rndnum
@@ -4,7 +4,7 @@
 #========================================================================
 
 # Define core directory below which everything resides
-F_MASTER = /Users/localuser/Github/GMET
+F_MASTER = /home/gut428/GMET
 
 # Core directory that contains source code
 F_SRC_DIR = $(F_MASTER)/scrf
@@ -56,22 +56,23 @@ SCRF_DATAMS= \
 		linkstruct.f90 \
 		dat_2dgrid.f90 \
 		inputdat2d.f90 \
-		namelist_module.f90
+		namelist_module_rndnum.f90
 DATAMS = $(patsubst %, $(MOD_DIR)/%, $(SCRF_DATAMS))
 
 # Routines taken from or modifed versions of Jason Craig's old Prob QPE code
 prob_qpe= \
-		utim.f90 \
+		generate_date_series.f90 \
 		precmod.f90 \
 		stringmod.f90 \
+		utim.f90 \
 		save_precip.f90 \
 		save_vars.f90 \
-		save_vars_rndnum.f90 \
+		save_rndnum.f90 \
 		read_nc_grid.f90 \
-		read_grid_list.f90 \
-		read_climo_precip.f90 \
-		read_climo_temp.f90 \
-		read_climo_uncertainty.f90
+		read_nc_exp2p.f90 \
+		read_nc_3Dvar.f90 \
+		read_grid_list.f90
+
 qpe = $(patsubst %, $(F_SRC_DIR)/%, $(prob_qpe))
 
 # Define routines for SCRF code
@@ -81,9 +82,9 @@ SCRF_GEN = \
 		trig_degrees.f90 \
 		erfinv.f90 \
 		exit_scrf.f90 \
-		field_rand.f90 \
-		spcorr_grd.f90 \
-                init_rand_seed_I4B.f90
+		field_rand_nopointer.f90 \
+		spcorr_grd_exp2p.f90 \
+        init_rand_seed_I4B.f90
 
 GEN = $(patsubst %, $(F_SRC_DIR)/%, $(SCRF_GEN))
 
@@ -98,20 +99,21 @@ SCRF_ALL = $(NRUTIL) $(NRPROC) $(DATAMS) $(qpe) $(GEN)
 FC = gfortran
 
 # NetCDF libraries
-PATHNETCDF = /usr/local/Cellar/netcdf/4.6.3_1
+PATHNETCDF = /cvmfs/soft.computecanada.ca/easybuild/software/2017/avx/Compiler/gcc5.4/netcdf-fortran/4.4.4
 LIBNETCDF = -L$(PATHNETCDF)/lib -lnetcdff
 INCNETCDF = -I$(PATHNETCDF)/include
+# LIBSystem = -L/usr/lib -lSystem
 
 # define compiler flags
-FLAGS = -p -g -Wall -ffree-line-length-none -fmax-errors=0 -fbacktrace -fcheck=bounds
+FLAGS = -p -g -Wall -w -ffree-line-length-none -fmax-errors=0 -fbacktrace -fcheck=bounds
 
 # Define the driver routine
 SCRF_DRIVER= \
-	generate_ensembles.f90
+	generate_rndnum_exp2p.f90
 DRIVER = $(patsubst %, $(DRIVER_DIR)/%, $(SCRF_DRIVER))
 
 # name of executable
-EXE = generate_ensemble.exe
+EXE = generate_rndnum_exp2p.exe
 
 #========================================================================
 # PART 3: Checks
